# simple-vr-player

./: CLAUDE.md  CMakeLists.txt  performance.md  roadmap.md
shaders/: quad.frag  quad.vert  quad.vert.spv
src/: cuda_interop.cu  cuda_interop.h  main.cpp  math_utils.h
